--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
-
+        <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
     </head>
 
     <!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
@@ -40,7 +41,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand page-scroll" href="#page-top">NewCo - The world's finest catering</a>
+                    <a class="navbar-brand page-scroll" href="#page-top">NewCo</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,13 +52,22 @@
                             <a class="page-scroll" href="#page-top"></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#about">About</a>
+                            <a class="page-scroll" href="#menus">Menus</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#services">Services</a>
+                            <a class="page-scroll" href="#events">Events</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#contact">Contact</a>
+                            <a class="page-scroll" href="#mealdelivery">Meal Delivery</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#aboutus">About Us</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#contactus">Contact Us</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#testimonials">Testimonials</a>
                         </li>
                     </ul>
                 </div>
@@ -70,81 +80,160 @@
         <section id="intro" class="intro-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
-                        <h1>Scrolling Nav</h1>
-                        <div id="myCarousel" class="carousel slide" data-ride="carousel" height=60%>
-                          <!-- Indicators -->
-                          <ol class="carousel-indicators">
-                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#myCarousel" data-slide-to="1"></li>
-                            <li data-target="#myCarousel" data-slide-to="2"></li>
-                        </ol>
+                    <div class="col-lg-12 col-sm-12 col-md-12">
+                        <p id="main-title">NewCo</p>
+                        <p id="strapline">Tailored catering, cakes and events</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6 col-md-6 carousel-container">
+                            <div id="myCarousel" class="carousel slide" data-ride="carousel" height=60%>
+                              <!-- Indicators -->
+                              <ol class="carousel-indicators">
+                                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                                <li data-target="#myCarousel" data-slide-to="1"></li>
+                                <li data-target="#myCarousel" data-slide-to="2"></li>
+                            </ol>
 
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner" role="listbox">
-                            <div class="item active">
-                              <img src="carousel/cheese-smaller.jpg" class="img-responsive center-block" alt="Chania">
-                          </div>
-  
-                          <div class="item">
-                              <img src="carousel/pepper-smaller.jpg" class="img-responsive center-block"alt="Chania">
-                          </div>
+                            <!-- Wrapper for slides -->
+                            <div class="carousel-inner" role="listbox">
+                                <div class="item active">
+                                  <img src="carousel/cheese-smaller.jpg" class="img-responsive center-block" alt="Chania">
+                              </div>
 
-                          <div class="item">
-                              <img src="carousel/tagine-smaller.jpg" class="img-responsive center-block"alt="Flower">
+                              <div class="item">
+                                  <img src="carousel/pepper-smaller.jpg" class="img-responsive center-block"alt="Chania">
+                              </div>
+
+                              <div class="item">
+                                  <img src="carousel/tagine-smaller.jpg" class="img-responsive center-block"alt="Flower">
+                              </div>
                           </div>
                       </div>
+                  </div>
 
+                  <div class="carousel-container">
+                    <div class="col-lg-2 col-sm-3 col-md-3">
+                        <a class="page-scroll homepage-links" href="#menus">Menus</a>
+                    </div>
+                    <div class="col-lg-2 col-sm-3 col-md-3">
+                        <a class="page-scroll homepage-links" href="#events">Events</a>
+                    </div>
+                    <div class="col-lg-2 col-sm-3 col-md-3">
+                        <a class="page-scroll homepage-links" href="#mealdelivery">Meal Delivery</a>
+                    </div>
+                    <div class="col-lg-2 col-sm-3 col-md-3">
+                        <a class="page-scroll homepage-links" href="#aboutus">About Us</a>
+                    </div>
+                    <div class="col-lg-2 col-sm-3 col-md-3">
+                        <a class="page-scroll homepage-links" href="#contactus">Contact Us</a>
+                    </div>
+                    <div class="col-lg-2 col-sm-3 col-md-3">
+                        <a class="page-scroll homepage-links" href="#testimonials">Testimonials</a>
+                    </div>
+
+<div class="col-lg-6  col-sm-6 col-md-6 carousel-container">
+                            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+                            <!-- Wrapper for slides -->
+                            <div class="carousel-inner testimonial-carousel" role="listbox">
+                                <div class="item active ">
+                                    <p class="testimonial-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempor consectetur ipsum non placerat."</p>
+                                    <p class="testimonial-name">Amanda</p>
+                              </div> 
+                              <div class="item">
+                                    <p class="testimonial-text">"Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos."</p>
+                                    <p class="testimonial-name">Bob</p>
+                              </div>
+                              <div class="item">
+                                    <p class="testimonial-text">"Sed vel odio malesuada, condimentum nunc non, convallis justo"  </p>
+                                    <p class="testimonial-name">Charles</p>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
 
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- About Section -->
-<section id="about" class="about-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1>About Section</h1>
+    <!-- Menus Section -->
+    <section id="menus" class="menus-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Menus</h1>
 
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- Services Section -->
-<section id="services" class="services-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1>Services Section</h1>
+    <!-- Services Section -->
+    <section id="events" class="events-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Events</h1>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- Contact Section -->
-<section id="contact" class="contact-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1>Contact Section</h1>
+    <!-- Meal Delivery Section -->
+    <section id="mealdelivery" class="mealdelivery-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Meal Delivery</h1>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- jQuery -->
-<script src="js/jquery.js"></script>
+    <!-- Meal Delivery Section -->
+    <section id="aboutus" class="aboutus-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>About Us</h1>
+                </div>
+            </div>
+        </div>
+    </section>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+    <!-- Meal Delivery Section -->
+    <section id="contactus" class="contactus-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Contact Us</h1>
+                </div>
+            </div>
+        </div>
+    </section>
 
-<!-- Scrolling Nav JavaScript -->
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/scrolling-nav.js"></script>
+    <!-- Meal Delivery Section -->
+    <section id="testimonials" class="testimonials-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Testimonials</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Scrolling Nav JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/scrolling-nav.js"></script>
 
 </body>
 
